Import of DJERIUS/pkg-0.02 from CPAN.
gitpan-cpan-distribution: pkg
gitpan-cpan-version:      0.02
gitpan-cpan-path:         DJERIUS/pkg-0.02.tar.gz
gitpan-cpan-author:       DJERIUS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for pkg
 
-0.01  
+0.02 Mon Mar  4 21:58:33 EST 2013
+
+[BUG FIX]
+
+* remove debug print statement
+
+
+0.01
        Initial release.
 
