--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for pkg
 
+0.04 Wed Apr 24 20:57:19 EDT 2013
+
+* bump version number to reflect upload of distribution to CPAN with
+  corrected CPAN metadata
+
+
 0.03 Tue Mar  5 22:07:01 EST 2013
 
 [BUILD FIX]
